# reminders-kanban

./: .gitignore  CLAUDE.md  DESIGN.md  package-lock.json  package.json  playwright.config.js  vite.config.js
src/: emoji-picker.js  index.html  main.js  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/swift-helper/: reminders-helper-aarch64-apple-darwin  reminders-helper.swift  test_helper.py
tests/: kanban.spec.js  mock-invoke.js
