[package]
name = "reminders-kanban"
version = "0.1.0"
description = "Reminders Kanban - macOS Reminders as a Kanban board"
authors = ["Hao Liu"]
license = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "reminders_kanban_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
